--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,12 @@
 @import './base.css';
+
 @import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Average+Sans&family=Comfortaa:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 #app {
-font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 134%;
+  letter-spacing: 0%;
+  color: var(--black);
 }
