--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -18,7 +18,7 @@
 }
 
 body {
-  max-width: 1920px;
+  max-width: 1550px;
   margin: 0 auto;
   min-height: 100vh;
   background: var(--background);
@@ -26,4 +26,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: right top;
+}
+.strikethrough {
+  text-decoration: line-through;
 }
