--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -31,6 +31,9 @@ body {
   text-decoration: line-through;
 }
 
+span{
+  color: var(--primary);
+}
 section{
   padding-top: 40px;
   padding-bottom: 60px;
