--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,7 +3,7 @@
   --custom-white: rgba(245, 250, 255, 1);
   --shadow: 0px 0px 40px rgba(86, 86, 86, 0.3);
   --background: #f5faff;
-  --background-block: rgba(245, 250, 255, 0.8);
+  --background-block: rgba(245, 250, 255);
   --primary: rgba(100, 211, 112, 1);
   --grey: rgba(222, 230, 238, 1);
   --black: rgba(2, 2, 2, 1)
